[package]
name = "fdungeoncrawl"
version = "0.1.2"
edition = "2018"
description = "Dungeon Crawler from Hands on Rust: Herbert Wolverson"
repository = "https://github.com/frankieD3/fdungeoncrawl"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "0.8.1"
legion = "0.4.0"
colored= "2"
serde = {version = "1.0.130" }
ron = "0.6.5"

[profile.release]
lto = "thin"
